--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file where you can add configuration options com.slope.knowcommunity.common to all sub-projects/modules.
 
 buildscript {
     repositories {
